# emergent.strategy

./: .ai-agent-instructions.md  .dockerignore  .env  .env.bak  .env.bak2  .env.bak3  .env.coolify.buildtime  .env.coolify.example  .env.coolify.runtime  .env.dev.local  .env.e2e  .env.example  .env.local  .env.local.bak  .env.opencode  .env.remote  .env.test  .env.test.local  .env.test.local.example  .gitignore  .gitmodules  .jscpd.json  .prettierignore  AGENTS.md  CANONICAL_PURITY_RULES.md  CHANGELOG.md  CHAT_GRAPH_SEARCH_INVESTIGATION.md  CONSTITUTION.md  CONTRIBUTING.md  COOLIFY_DEPLOYMENT_READY.md  COOLIFY_DOCKER_COMPOSE_FIX.md  COOLIFY_ENV_FIX.md  COOLIFY_INFISICAL_SETUP.md  EMBEDDING_APIS_SUMMARY.md  INFISICAL_TROUBLESHOOTING.md  MAINTENANCE.md  MIGRATION_CHECKLIST.md  ORGANIZATION_ID_MIGRATION_COMPLETE.md  QUICK_REFERENCE_REMOTE_DEV.md  QUICK_START_DEV.md  (+64 more)
.gemini/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.husky/: pre-commit
.opencode/: .gitignore  instructions.md  opencode.db-shm  opencode.db-wal
_instances/: README.md
definitions/: README.md
dev-logs/: dev-journal.md
docker/: .env  .env.coolify  .env.example  01-init-zitadel.sh  (+19 more)
eval/epf-model-compliance/: .env.example  .gitignore  pyproject.toml
eval/epf-model-compliance/epf_eval/: __init__.py  agent_loop.py  providers.py  run.py  scenarios.py  scoring.py  tools.py  tracing.py  types.py
eval/epf-model-compliance/reports/: eval-20260222-180545-8f7794.json  eval-20260222-202334-bacfeb.json  eval-20260223-005134-a5352a.json  eval-20260223-005511-38e15d.json
(+6211 files in other folders)
