[project]
name = "epf-model-compliance"
version = "0.1.0"
description = "Model compliance eval suite for EPF structured tool responses"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "langfuse>=2.50.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
epf-eval = "epf_eval.run:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["epf_eval"]
